src/test/deca/syntax/invalid/created/matherror/matherror3.deca

//DESCRIPTION : oublie du signe multiplier
//## TEST SYN
//  Exception in thread "main" java.lang.AssertionError

{
 int w = 2;
 int a = 42w;
}